force-app/main/default/objects/Supplier_Catalogue_Item__c/Supplier_Catalogue_Item__c.object-meta.xml
<CustomObject>
    <description>Line item offered in a supplier catalogue. Nested under Supplier Catalogue on the whiteboard.</description>
    <label>Supplier Catalogue Item</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Catalogue Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>