force-app/main/default/objects/Supplier_Catalogue_Item__c/fields/Minimum_Order_Qty__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Order_Qty__c</fullName>
    <label>Minimum Order Qty</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>