force-app/main/default/objects/Supplier_Catalogue_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional link to the standard Product catalog.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Supplier Catalogue Items</relationshipLabel>
    <relationshipName>Catalogue_Items</relationshipName>
    <type>Lookup</type>
</CustomField>