force-app/main/default/objects/Supplier_Catalogue_Item__c/fields/Supplier_Catalogue__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Catalogue__c</fullName>
    <description>Parent catalogue for this item.</description>
    <label>Supplier Catalogue</label>
    <referenceTo>Supplier_Catalogue__c</referenceTo>
    <relationshipLabel>Catalogue Items</relationshipLabel>
    <relationshipName>Catalogue_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>