force-app/main/default/objects/Supplier_Catalogue_Item__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <label>Unit of Measure</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Each</fullName>
                <default>true</default>
                <label>Each</label>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Kg</fullName>
            </value>
            <value>
                <fullName>Litre</fullName>
            </value>
            <value>
                <fullName>Pallet</fullName>
            </value>
            <value>
                <fullName>Pack</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>