force-app/main/default/objects/Supplier_Catalogue_Item__c/validationRules/Price_Non_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Price_Non_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>Unit_Price__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Unit_Price__c</errorDisplayField>
    <errorMessage>Unit Price cannot be negative.</errorMessage>
</ValidationRule>