force-app/main/default/objects/Supplier_Catalogue_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Supplier_Catalogue__c</columns>
    <columns>SKU__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>